# meilisearch-cli

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: pypi_publish.yaml  testing.yaml
meilisearch_cli/: __main__.py  _config.py  _docs.py  _helpers.py  documents.py  dump.py  index.py  main.py
tests/: conftest.py  test_docs.py  test_documents.py  test_dumps.py  test_helper.py  test_index.py  test_main.py  utils.py
