[tool.poetry]
name = "meilisearch-cli"
version = "0.11.0"
description = "CLI for MeiliSearch"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sanders41/meilisearch-cli"
homepage = "https://github.com/sanders41/meilisearch-cli"
documentation = "https://github.com/sanders41/meilisearch-cli"
keywords = ["meilisearch", "cli"]
classifiers=[
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
include = ["meilisearch_cli/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
meilisearch = "^0.18.3"
typer = "0.4.1"
rich = "12.4.1"
requests = "2.27.1"
beautifulsoup4 = "4.11.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.960"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
tox = "^3.25.0"
types-requests = "^2.27.27"
tomlkit = "^0.10.2"
PyJWT = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
meilisearch-cli = "meilisearch_cli.main:app"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["meilisearch_cli", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["bs4.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=meilisearch_cli --cov-report term-missing"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]
