[tool.poetry]
name = "meilisearch-cli"
version = "0.11.0"
description = "CLI for MeiliSearch"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sanders41/meilisearch-cli"
homepage = "https://github.com/sanders41/meilisearch-cli"
documentation = "https://github.com/sanders41/meilisearch-cli"
keywords = ["meilisearch", "cli"]
classifiers=[
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
include = ["meilisearch_cli/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
meilisearch = ">=0.18.3,<0.26.0"
typer = "0.7.0"
rich = "13.0.1"
requests = "2.28.2"
beautifulsoup4 = "4.11.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^5.0.4"
isort = "^5.11.4"
mypy = "^0.991"
pre-commit = "^2.21.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
tox = "^3.26.0"
types-requests = "^2.28.11"
tomlkit = "^0.11.7"
PyJWT = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
meilisearch-cli = "meilisearch_cli.main:app"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["meilisearch_cli", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["bs4.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=meilisearch_cli --cov-report term-missing"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]
